# aoc

./: pyproject.toml
2022/: answers.md
2022/day-1/: puzzle.md
2022/go-aoc/: main.go
2022/lua-aoc/: day-5.lua  day4.lua
2022/puzzles/: day-5.md
2023/go-aoc/cmd/: main.go
2023/go-aoc/puzzles/: day1.go  day10.go  day10_test.go  day11.go  day11_test.go  day12.go  day12_test.go  day1_test.go  day8.go  day9.go  day9_test.go
2023/go-aoc/utils/: utils.go
2023/inputs/: day3-ex.txt
2023/puzzles/: day-01.md  day-03.md  day-08.md  day-10.md  day-14.md  day-17.md  day-18.md  day-19.md  day-2.md  day-20.md  day-22.md  day-23.md  day-3.md  day-4.md  day-5.md  day-6.md  day-7.md
2023/py-aoc/: main.py  pyproject.toml
2023/py-aoc/aoc/puzzles/: day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_5_2.py  day_6.py  day_7.py
2023/py-aoc/aoc/utils/: util.py
2023/py-aoc/tests/: day_2_test.py  day_4_test.py  day_5_test.py  day_6_test.py  day_7_test.py  puzzle_test.py
aoc-go/: go.mod  main.go
aoc-go/puzzles/: day1.go
docs/: notes.md  todo.md
go-aoc-2022/: README.md  go.mod  main.go
go-aoc-2022/puzzles/: dayOne.go
go-aoc-2022/puzzles/day1/: dayOne.go
go-aoc-2022/puzzles/day2/: dayTwo.go  dayTwo_test.go  move.go  round_result.go
lang/aoc-py/: puzzle.py  pyproject.toml
puzzles-descriptions/: day2.md
py-aoc-2022/: pyproject.toml
py-aoc-2022/aoc/puzzles/day1/: day1.py  puzzle.md
py-aoc-2022/aoc/puzzles/day2/: day2.py
py-aoc-2022/aoc/puzzles/day3/: puzzle.md
tools/aoc-utils/: pyproject.toml
tools/aoc-utils/src/aoc_utils/: __init__.py
(+137 files in other folders)
