[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Victor Tantillo <v.tantillo3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
