[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Victor Tantillo <v.tantillo3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.0"
pydantic = "^2.5.2"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
