[project]
name = "aoc-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Victor Tantillo", email = "v.tantillo3@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
]

[project.scripts]
aoc-utils = "aoc_utils:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
